--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <div style='float:left; margin-bottom:20px;'>
           Zach Saucier
         </div>
+        <link type="text/css" rel="stylesheet" href="style.css" />
         <div class="stage">
           <div class="pyramid3d">
             <div class="triangle side1"></div>
